--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <title>Responsive Web</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -191,13 +194,157 @@
         </div>
       </div>
       <div class="platform row">
-        <div class="col-md-6 col-sm-12 text-right"></div>
-        <div class="col-md-6 col-sm-12 text-left"></div>
+        <div class="col-md-6 col-sm-12 text-right">
+          <div class="desktop shadow-lg">
+            <div class="d-flex flex-row justify-content-center">
+              <i class="fas fa-desktop fa-3x py-2 pr-3"></i>
+              <div class="text text-left">
+                <h3 class="pt-1 m-0">Desktop</h3>
+                <p class="p-0 m-0">On Website</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12 text-left">
+          <div class="desktop shadow-lg">
+            <div class="d-flex flex-row justify-content-center">
+              <i class="fas fa-mobile-alt fa-3x py-2 pr-3"></i>
+              <div class="text text-left">
+                <h3 class="pt-1 m-0">On Mobile</h3>
+                <p class="p-0 m-0">On Play Store</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-  </main>
-  <footer>
 
+    <section class="section-4">
+      <div class="container text-center">
+        <h1 class="text-dark">What Our Clients Say About Us</h1>
+        <p class="text-secondary">Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="team row">
+        <div class="col-md-4 col-12 text-center">
+          <div class="card mr-2 d-inline-block shadow-lg">
+            <div class="card-img-top">
+              <img src="../assets/UI-face-1.jpg" alt="Member" class="img-fluid">
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Arums Smeals</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam voluptate, nesciunt accusamus
+                commodi necessitatibus harum maxime doloribus ea nulla non.
+              </p>
+              <a href="#" class="text-secondary text-decoration-none">Go Somewhere</a>
+              <p class="text-black-50">CEO at Amazon</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-12">
+          <!-- Carousel started -->
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active text-center">
+                <!-- Card 2 -->
+                <div class="card mr-2 d-inline-block shadow-lg">
+                  <div class="card-img-top">
+                    <img src="../assets/UI-face-2.jpg" alt="Member" class="img-fluid">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">Musse Kadee</h3>
+                    <p class="card-text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam voluptate, nesciunt accusamus
+                      commodi necessitatibus harum maxime doloribus ea nulla non.
+                    </p>
+                    <a href="#" class="text-secondary text-decoration-none">Go Somewhere</a>
+                    <p class="text-black-50">CEO at Amazon</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item text-center">
+                <!-- Card 3 -->
+                <div class="card mr-2 d-inline-block shadow-lg">
+                  <div class="card-img-top">
+                    <img src="../assets/UI-face-3.jpg" alt="Member" class="img-fluid">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">Jase Hewerg</h3>
+                    <p class="card-text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam voluptate, nesciunt accusamus
+                      commodi necessitatibus harum maxime doloribus ea nulla non.
+                    </p>
+                    <a href="#" class="text-secondary text-decoration-none">Go Somewhere</a>
+                    <p class="text-black-50">CEO at Amazon</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-12 text-center">
+          <!-- Card 4 -->
+          <div class="card mr-2 d-inline-block shadow-lg">
+            <div class="card-img-top">
+              <img src="../assets/UI-face-4.jpg" alt="Member" class="img-fluid">
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Helen Narns</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam voluptate, nesciunt accusamus
+                commodi necessitatibus harum maxime doloribus ea nulla non.
+              </p>
+              <a href="#" class="text-secondary text-decoration-none">Go Somewhere</a>
+              <p class="text-black-50">CEO at Amazon</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="container-fluid p-0">
+      <div class="row text-left">
+        <div class="col-md-5 col-md-5">
+          <h1 class="text-light">About Us</h1>
+          <p class="text-muted">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, itaque.
+          </p>
+          <p class="pt-4 text-muted">
+            Copyright @2020 All right reserved | Lorem ipsum dolor sit amet
+            <span>Lorem</span>
+          </p>
+        </div>
+        <div class="col-md-5">
+          <h4 class="text-light">News Letter</h4>
+          <p class="text-muted">Stay Updated</p>
+          <form class="form-inline">
+            <div class="col pl-0">
+              <div class="input-group pr-5">
+                <input type="text" class="form-control bg-dark text-white" placeholder="Email">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">
+                    <i class="fas fa-arrow-right"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-md-2 col-sm-12">
+          <h4 class="text-light">Follow Us</h4>
+          <p class="text-muted">Let us be social</p>
+          <div class="column">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
