updated css. finished basic css

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
   <header>
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Responsive Web</a>
+        <a class="navbar-brand" href="#">
+          <i class="fas fa-feather-alt fa-3x mx-3"></i>
+          Responsive Web
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,7 +60,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-md-7 col-sm-12">
-          <h6>AUTHOR: YASUKO KURATA</h6>
+          <h6>AUTHOR: JOHN DOE</h6>
           <h1>TITLE IS HERE...</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, ducimus quasi. Sint vel commodi saepe omnis
             sed tempora doloribus voluptas?
@@ -228,7 +231,7 @@
         <div class="col-md-4 col-12 text-center">
           <div class="card mr-2 d-inline-block shadow-lg">
             <div class="card-img-top">
-              <img src="../assets/UI-face-1.jpg" alt="Member" class="img-fluid">
+              <img src="../assets/UI-face-1.jpg" alt="Member" class="img-fluid border-radius p-4">
             </div>
             <div class="card-body">
               <h3 class="card-title">Arums Smeals</h3>
@@ -249,7 +252,7 @@
                 <!-- Card 2 -->
                 <div class="card mr-2 d-inline-block shadow-lg">
                   <div class="card-img-top">
-                    <img src="../assets/UI-face-2.jpg" alt="Member" class="img-fluid">
+                    <img src="../assets/UI-face-2.jpg" alt="Member" class="img-fluid rounded-circle w-50 p-4">
                   </div>
                   <div class="card-body">
                     <h3 class="card-title">Musse Kadee</h3>
@@ -266,7 +269,7 @@
                 <!-- Card 3 -->
                 <div class="card mr-2 d-inline-block shadow-lg">
                   <div class="card-img-top">
-                    <img src="../assets/UI-face-3.jpg" alt="Member" class="img-fluid">
+                    <img src="../assets/UI-face-3.jpg" alt="Member" class="img-fluid rounded-circle w-50 p-4">
                   </div>
                   <div class="card-body">
                     <h3 class="card-title">Jase Hewerg</h3>
@@ -286,7 +289,7 @@
           <!-- Card 4 -->
           <div class="card mr-2 d-inline-block shadow-lg">
             <div class="card-img-top">
-              <img src="../assets/UI-face-4.jpg" alt="Member" class="img-fluid">
+              <img src="../assets/UI-face-4.jpg" alt="Member" class="img-fluid border-radius p-4">
             </div>
             <div class="card-body">
               <h3 class="card-title">Helen Narns</h3>
