--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <i class="fas fa-align-right text-light"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <div class="mr-auto"></div>
@@ -360,7 +360,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
   </script>
-
+  <script src="./main.js"></script>
 </body>
 
 </html>
